syntax = "proto3";

option go_package = "/github_io_cam_micro";
option java_package = "io.github.cam.micro";

service CamMicro {
  rpc register(CamMicroRegisterIn) returns(CamMicroRegisterOut) {}
  rpc heartbeat(stream CamMicroHeartbeatSteam) returns(stream CamMicroHeartbeatSteam) {}
  rpc getServer(CamMicroGetServerIn) returns(CamMicroGetServerOut) {}
}

message CamMicroGetServerIn {
  string appName = 1;
}

message CamMicroGetServerOut {
  string address = 1;
}

message CamMicroRegisterIn {
  string appName = 1;
  string address = 2;
}

message CamMicroRegisterOut {
  bool done = 1;
}

message CamMicroHeartbeatSteam {
    CamMicroHeartbeatType type = 1;
}

enum CamMicroHeartbeatType {
  Ping = 0;
  Pong = 1;
}
